* Added support for image thumbnailing to prop=imageinfo
* action={login,block,delete,move,protect,rollback,unblock,undelete} now must be POSTed
* prop=imageinfo interface changed: iihistory replaced by iilimit, iistart and iiend parameters
* Added amlang parameter to meta=allmessages
* Added apfilterlanglinks parameter to list=allpages, replacing query.php?what=nolanglinks

=== Languages updated in 1.12 ===

* Afrikaans (af)
* Akan (ak) (new)
* Amharic (am) (new)
* Aragonese (an)
* Old English (ang) (new)
* Arabic (ar)
* Aramaic (arc)
* Mapudungun (arn) (new)
* Assamese (as)
* Asturian (ast)
* Avaric (av)
* Kotava (avk) (new)
* Aymara (ay)
* Samogitian (bat-smg)
* Boarisch (bar)
* Bikol Central (bcl)
* Belarusian (be)
* Belarusian Taraskievica orthography (be-tarask)
* Bulgarian (bg)
* Bislama (bi) (new)
* Bamanankan (bm)
* Bengali (bn)
* Bishnupriya Manipuri (bpy)
* Breton (br)
* Buginese (bug) (new)
* Catalan (ca)
* Zamboangueño (cbk-zam) (new)
* Min Dong (cdo) (new)
* Chechen (ce)
* Cebuano (ceb) (new)
* Cherokee (chr) (new)
* Corsican (co) (new)
* Crimean Tatar (Cyrillic) (crh-cyrl) (new)
* Crimean Tatar (Latin) (crh-latn) (new)
* Czech (cs)
* Cassubian (csb)
* Old Church Slavonic (cu)
* Welsh (cy)
* Danish (da)
* German (de)
* German (de-formal) (new)
* Zazaki (diq) (new)
* Lower Sorbian (dsb) (new)
* Middle Dutch (dum) (new)
* Divehi (dv)
* Ewe (ee) (new)
* Greek (el)
* Emiliano-Romagnolo (eml)
* English (en)
* Spanish (es)
* Estonian (et)
* Euskara (eu)
* Extremaduran (ext)
* Finnish (fi)
* Persian (fa)
* Fulah (ff)
* Võro (fiu-vro)
* Fijian (fj) (new)
* Faroese (fo)
* French (fr)
* Cajun French (frc)
* Franco-Provençal (frp)
* Frisian (fy)
* Irish (ga)
* Gagauz (gag) (new)
* Gön-gnŷ (gan) (new)
* Scottish Gaelic (gd) (new)
* Galician (gl)
* Gilaki (glk) (new)
* Gothic (got) (new)
* Ancient Greek (grc) (new)
* Swiss German (gsw)
* Hakka (hak)
* Hawaiian (haw) (new)
* Hebrew (he)
* Croatian (hr)
* Upper Sorbian (hsb)
* Haitian Creole French (ht)